Set manila cephfs backend if ceph is deployed
Depends-On: Iac4a260af6738ed6afd4bcb107221a736d07c1b5
Change-Id: I279f6080b3cd7cf6be8513d94171bf9ff94a4698
Partial-Bug: #1644784

--- a/puppet/services/ceph-mon.yaml
+++ b/puppet/services/ceph-mon.yaml
@@ -28,6 +28,12 @@ parameters:
   CinderRbdPoolName:
     default: volumes
     type: string
+  ManilaCephFSDataPoolName:
+    default: manila_data
+    type: string
+  ManilaCephFSMetadataPoolName:
+    default: manila_metadata
+    type: string
   CinderBackupRbdPoolName:
     default: backups
     type: string
@@ -87,6 +93,8 @@ outputs:
                       for_each:
                         <%pool%>:
                           - {get_param: CinderRbdPoolName}
+                          - {get_param: ManilaCephFSDataPoolName}
+                          - {get_param: ManilaCephFSMetadataPoolName}
                           - {get_param: CinderBackupRbdPoolName}
                           - {get_param: NovaRbdPoolName}
                           - {get_param: GlanceRbdPoolName}
