--- a/puppet/services/pacemaker/rabbitmq.yaml
+++ b/puppet/services/pacemaker/rabbitmq.yaml
@@ -68,3 +68,5 @@ outputs:
             fi
             pcs resource update rabbitmq set_policy='ha-all ^(?!amq\\.).* {"ha-mode":"exactly","ha-params":'"$nr_queues}" --wait=600
           when: is_bootstrap_node and migrate_rabbit_ha_mode
+      metadata_settings:
+        get_attr: [RabbitMQServiceBase, role_data, metadata_settings]
