--- a/puppet/services/rabbitmq.yaml
+++ b/puppet/services/rabbitmq.yaml
@@ -48,6 +48,18 @@ parameters:
   MonitoringSubscriptionRabbitmq:
     default: 'overcloud-rabbitmq'
     type: string
+  EnableInternalTLS:
+    type: boolean
+    default: false
+
+resources:
+
+  RabbitMQTLS:
+    type: OS::TripleO::Services::RabbitMQTLS
+    properties:
+      ServiceNetMap: {get_param: ServiceNetMap}
+      DefaultPasswords: {get_param: DefaultPasswords}
+      EndpointMap: {get_param: EndpointMap}
 
 outputs:
   role_data:
@@ -56,51 +68,62 @@ outputs:
       service_name: rabbitmq
       monitoring_subscription: {get_param: MonitoringSubscriptionRabbitmq}
       config_settings:
-        rabbitmq::file_limit: {get_param: RabbitFDLimit}
-        rabbitmq::default_user: {get_param: RabbitUserName}
-        rabbitmq::default_pass: {get_param: RabbitPassword}
-        rabbit_ipv6: {get_param: RabbitIPv6}
-        tripleo.rabbitmq.firewall_rules:
-          '109 rabbitmq':
-            dport:
-              - 4369
-              - 5672
-              - 25672
-        rabbitmq::delete_guest_user: false
-        rabbitmq::wipe_db_on_cookie_change: true
-        rabbitmq::port: '5672'
-        rabbitmq::package_provider: yum
-        rabbitmq::package_source: undef
-        rabbitmq::repos_ensure: false
-        rabbitmq::tcp_keepalive: true
-        rabbitmq_environment:
-          NODE_PORT: ''
-          NODE_IP_ADDRESS: ''
-          RABBITMQ_NODENAME: "rabbit@%{::hostname}"
-          RABBITMQ_SERVER_ERL_ARGS: '"+K true +P 1048576 -kernel inet_default_connect_options [{nodelay,true},{raw,6,18,<<5000:64/native>>}] -kernel inet_default_listen_options [{raw,6,18,<<5000:64/native>>}]"'
-          'export ERL_EPMD_ADDRESS': "%{hiera('rabbitmq::interface')}"
-        rabbitmq_kernel_variables:
-          inet_dist_listen_min: '25672'
-          inet_dist_listen_max: '25672'
-        rabbitmq_config_variables:
-          cluster_partition_handling: 'pause_minority'
-          queue_master_locator: '<<"min-masters">>'
-          loopback_users: '[]'
-        rabbitmq::erlang_cookie:
-          yaql:
-            expression: $.data.passwords.where($ != '').first()
-            data:
-              passwords:
-                - {get_param: RabbitCookie}
-                - {get_param: [DefaultPasswords, rabbit_cookie]}
-        # NOTE: bind IP is found in Heat replacing the network name with the
-        # local node IP for the given network; replacement examples
-        # (eg. for internal_api):
-        # internal_api -> IP
-        # internal_api_uri -> [IP]
-        # internal_api_subnet - > IP/CIDR
-        rabbitmq::interface: {get_param: [ServiceNetMap, RabbitmqNetwork]}
-        rabbitmq::nr_ha_queues: {get_param: RabbitHAQueues}
+        map_merge:
+          - get_attr: [RabbitMQTLS, role_data, config_settings]
+          -
+            rabbitmq::file_limit: {get_param: RabbitFDLimit}
+            rabbitmq::default_user: {get_param: RabbitUserName}
+            rabbitmq::default_pass: {get_param: RabbitPassword}
+            rabbit_ipv6: {get_param: RabbitIPv6}
+            tripleo.rabbitmq.firewall_rules:
+              '109 rabbitmq':
+                dport:
+                  - 4369
+                  - 5672
+                  - 25672
+            rabbitmq::delete_guest_user: false
+            rabbitmq::wipe_db_on_cookie_change: true
+            rabbitmq::port: '5672'
+            rabbitmq::package_provider: yum
+            rabbitmq::package_source: undef
+            rabbitmq::repos_ensure: false
+            rabbitmq::tcp_keepalive: true
+            rabbitmq_environment:
+              NODE_PORT: ''
+              NODE_IP_ADDRESS: ''
+              RABBITMQ_NODENAME: "rabbit@%{::hostname}"
+              RABBITMQ_SERVER_ERL_ARGS: '"+K true +P 1048576 -kernel inet_default_connect_options [{nodelay,true},{raw,6,18,<<5000:64/native>>}] -kernel inet_default_listen_options [{raw,6,18,<<5000:64/native>>}]"'
+              'export ERL_EPMD_ADDRESS': "%{hiera('rabbitmq::interface')}"
+            rabbitmq_kernel_variables:
+              inet_dist_listen_min: '25672'
+              inet_dist_listen_max: '25672'
+            rabbitmq_config_variables:
+              cluster_partition_handling: 'pause_minority'
+              queue_master_locator: '<<"min-masters">>'
+              loopback_users: '[]'
+            rabbitmq::erlang_cookie:
+              yaql:
+                expression: $.data.passwords.where($ != '').first()
+                data:
+                  passwords:
+                    - {get_param: RabbitCookie}
+                    - {get_param: [DefaultPasswords, rabbit_cookie]}
+            # NOTE: bind IP is found in Heat replacing the network name with the
+            # local node IP for the given network; replacement examples
+            # (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            rabbitmq::interface: {get_param: [ServiceNetMap, RabbitmqNetwork]}
+            rabbitmq::nr_ha_queues: {get_param: RabbitHAQueues}
+            rabbitmq::ssl: {get_param: EnableInternalTLS}
+            rabbitmq::ssl_port: '5672'
+            rabbitmq::ssl_depth: 1
+            rabbitmq::ssl_only: {get_param: EnableInternalTLS}
+            rabbitmq::ssl_interface: {get_param: [ServiceNetMap, RabbitmqNetwork]}
+            # TODO(jaosorior): Remove this once we set a proper default in
+            # puppet-tripleo
+            tripleo::profile::base::rabbitmq::enable_internal_tls: {get_param: EnableInternalTLS}
       step_config: |
         include ::tripleo::profile::base::rabbitmq
       upgrade_tasks:
@@ -110,4 +133,5 @@ outputs:
         - name: Start rabbitmq service
           tags: step4
           service: name=rabbitmq-server state=started
-
+      metadata_settings:
+        get_attr: [RabbitMQTLS, role_data, metadata_settings]
