Expose param to enable legacy ceilometer api
Change-Id: I75815a4bcbf421597abb86226238b74a9afffc0d
Depends-On: Iffb8c2cfed53d8b29e777c35cee44921194239e9

--- a/puppet/services/ceilometer-base.yaml
+++ b/puppet/services/ceilometer-base.yaml
@@ -50,6 +50,10 @@ parameters:
     default: false
     description: Whether to store events in ceilometer.
     type: boolean
+  EnableLegacyCeilometerApi:
+    default: false
+    description: Enable legacy ceilometer Api service if needed.
+    type: boolean
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -93,6 +97,7 @@ outputs:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/ceilometer'
+        enable_legacy_ceilometer_api: {get_param: EnableLegacyCeilometerApi}
         ceilometer_backend: {get_param: CeilometerBackend}
         ceilometer::metering_secret: {get_param: CeilometerMeteringSecret}
         # we include db_sync class in puppet-tripleo
