Synchronize NetworkDeployment inputs for generic roles
The inputs on the NetworkDeployment SoftwareDeployment resource were not
the same for generic roles as they were for the default roles
(role.role.js.yaml vs. controller-role.yaml).

This patch synchronizes the input between the 2 so that the interface is
the same for deployers.

Change-Id: Id14cf7ca219aee61f5b9d21171a5c41dea765f98
Implements: blueprint multinode-ci-os-net-config

--- a/puppet/role.role.j2.yaml
+++ b/puppet/role.role.j2.yaml
@@ -28,6 +28,10 @@ parameters:
     constraints:
       - custom_constraint: nova.keypair
 {% endif %}
+  NeutronPublicInterface:
+    default: nic1
+    description: What interface to bridge onto br-ex for network nodes.
+    type: string
   ServiceNetMap:
     default: {}
     description: Mapping of service_name -> network name. Typically set
@@ -332,6 +336,9 @@ resources:
       config: {get_resource: NetworkConfig}
       server: {get_resource: {{role}}}
       actions: {get_param: NetworkDeploymentActions}
+      input_values:
+        bridge_name: br-ex
+        interface_name: {get_param: NeutronPublicInterface}
 
   {{role}}Deployment:
     type: OS::Heat::StructuredDeployment
