--- a/ci/environments/scenario003-multinode.yaml
+++ b/ci/environments/scenario003-multinode.yaml
@@ -50,3 +50,4 @@ parameter_defaults:
   # we don't deploy Swift so we switch to file backend.
   GlanceBackend: 'file'
   KeystoneTokenProvider: 'fernet'
+  SwiftCeilometerPipelineEnabled: false
