Set the default event pipeline publisher
Since we have aodh enabled for alarms, we should set the
notifier to the default queue alarm.all.

Closes-bug: #1590473

Change-Id: Ibcb5076424ac2ddcd18ff717d82da1aec4c035cb

--- a/puppet/services/ceilometer-base.yaml
+++ b/puppet/services/ceilometer-base.yaml
@@ -54,6 +54,10 @@ parameters:
     default: false
     description: Enable legacy ceilometer Api service if needed.
     type: boolean
+  EventPipelinePublishers:
+    default: ['notifier://?topic=alarm.all']
+    description: A list of publishers to put in event_pipeline.yaml.
+    type: comma_delimited_list
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -109,6 +113,7 @@ outputs:
         ceilometer::agent::auth::auth_password: {get_param: CeilometerPassword}
         ceilometer::agent::auth::auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix] }
         ceilometer::agent::notification::store_events: {get_param: CeilometerStoreEvents}
+        ceilometer::agent::notification::event_pipeline_publishers: {get_param: EventPipelinePublishers}
         ceilometer::agent::auth::auth_region: {get_param: KeystoneRegion}
         ceilometer::agent::auth::auth_tenant_name: 'service'
         ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
