--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -103,6 +103,7 @@
     - OS::TripleO::Services::OVNDBs
     - OS::TripleO::Services::NeutronML2FujitsuCfab
     - OS::TripleO::Services::CinderHPELeftHandISCSI
+    - OS::TripleO::Services::Etcd
 
 - name: Compute
   CountDefault: 1
