--- a/puppet/major_upgrade_steps.j2.yaml
+++ b/puppet/major_upgrade_steps.j2.yaml
@@ -15,35 +15,7 @@ parameters:
       Setting to a previously unused value during stack-update will trigger
       the Upgrade resources to re-run on all roles.
 
-  UpgradeInitCommand:
-    type: string
-    description: |
-      Command or script snippet to run on all overcloud nodes to
-      initialize the upgrade process. E.g. a repository switch.
-    default: ''
-
 resources:
-
-  # For the UpgradeInit also rename /etc/resolv.conf.save for +bug/1567004
-  UpgradeInitConfig:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      group: script
-      config:
-        list_join:
-        - ''
-        - - "#!/bin/bash\n\n"
-          - "if [[ -f /etc/resolv.conf.save ]] ; then rm /etc/resolv.conf.save; fi\n\n"
-          - get_param: UpgradeInitCommand
-
-{% for role in roles %}
-  {{role.name}}Upgrade_Init:
-    type: OS::Heat::StructuredDeploymentGroup
-    properties:
-      name: {{role.name}}Upgrade_Init
-      servers: {get_param: [servers, {{role.name}}]}
-      config: {get_resource: UpgradeInitConfig}
-{% endfor %}
 
 # Upgrade Steps for all roles
 # FIXME(shardy): would be nice to make the number of steps configurable
@@ -56,10 +28,8 @@ resources:
   # serialization, but the event output is easier to follow if we
   # do, and there should be minimal performance hit (creating the
   # config is cheap compared to the time to apply the deployment).
+  {% if step > 1 %}
     depends_on:
-  {% if step == 1 %}
-      - {{role.name}}Upgrade_Init
-  {% else %}
       {% for dep in roles %}
       - {{dep.name}}Upgrade_Step{{step -1}}
       {% endfor %}
