--- a/puppet/controller-role.yaml
+++ b/puppet/controller-role.yaml
@@ -335,6 +335,11 @@ resources:
             - - {get_attr: [Controller, name]}
               - ctlplane
 
+  PreNetworkConfig:
+    type: OS::TripleO::Controller::PreNetworkConfig
+    properties:
+      server: {get_resource: Controller}
+
   NetworkConfig:
     type: OS::TripleO::Controller::Net::SoftwareConfig
     properties:
@@ -348,6 +353,7 @@ resources:
 
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
+    depends_on: PreNetworkConfig
     properties:
       name: NetworkDeployment
       config: {get_resource: NetworkConfig}
