--- a/puppet/compute-role.yaml
+++ b/puppet/compute-role.yaml
@@ -316,6 +316,11 @@ resources:
             - - {get_attr: [NovaCompute, name]}
               - ctlplane
 
+  PreNetworkConfig:
+    type: OS::TripleO::Compute::PreNetworkConfig
+    properties:
+      server: {get_resource: NovaCompute}
+
   NetworkConfig:
     type: OS::TripleO::Compute::Net::SoftwareConfig
     properties:
@@ -329,6 +334,7 @@ resources:
 
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
+    depends_on: PreNetworkConfig
     properties:
       name: NetworkDeployment
       config: {get_resource: NetworkConfig}
