--- a/puppet/role.role.j2.yaml
+++ b/puppet/role.role.j2.yaml
@@ -118,6 +118,9 @@ parameters:
   MonitoringSubscriptions:
     type: comma_delimited_list
     default: []
+  ServiceMetadataSettings:
+    type: json
+    default: {}
   ConfigCommand:
     type: string
     description: Command which will be run whenever configuration data changes
@@ -160,6 +163,7 @@ resources:
         map_merge:
           - {get_param: ServerMetadata}
           - {get_param: {{role}}ServerMetadata}
+          - {get_param: ServiceMetadataSettings}
       scheduler_hints: {get_param: {{role}}SchedulerHints}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
